# alignak-backend

./: .bintray-deb.json  .bintray-freebsd.json  .bintray-rpm.json  .gitattributes  .landscape.yml  .pylintrc  .travis.yml  AUTHORS  MANIFEST.in  README.md  README.rst  alignak_backend.py  code_test.sh  package.sh  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
.package/: alignak-backend.service  bintray.json  package.sh
alignak_backend/: __init__.py  app.py  carboniface.py  grafana.py  livestate.py  livesynthesis.py  log.py  main.py  perfdata.py  scheduler.py  template.py  timeseries.py  uwsgi.py
docs/: Makefile  api.rst  architecture.rst  conf.py  configuration.rst  features.rst  index.rst  install.rst  intro.rst  models_to_rst.py  resources.rst  run.rst  tools.rst  tutorial.rst
etc/: alignak-backend-logger.json  alignak-backend.wsgi  grafana_queries.json  settings.cfg  settings.ini  settings.json  uwsgi-service.ini  uwsgi.ini
test/: .coveragerc  alignakbackend.py  requirements.py26.txt  requirements.txt  setup_test.sh  test_actions.py  test_alignak.py  test_alignakretention.py  test_cfg_to_backend.py  test_commands.py  test_config.py  test_customs.py  test_grafana.py  test_grafana_datasource.py  test_groups.py  test_history.py  test_hook_alias_fill.py  test_hook_livestate.py  test_hook_livesynthesis.py  test_hook_template.py  test_host_service_creation.py  test_host_service_deletion.py  test_hostescalation.py  test_keep_default_items.py  test_livesynthesis_history.py  test_logcheckresult.py  test_login.py  test_models.py  test_overall_state.py  test_run.py  (+13 more)
(+315 files in other folders)
