[metadata]
classifiers =
   Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python :: 2.7
   Topic :: System :: Monitoring
    Topic :: System :: Systems Administration

[files]
packages =
    alignak_backend

[entry_points]
console_scripts =
    alignak_backend = alignak_backend.main:main

[pbr]
skip_authors = True
skip_changelog = True
